# pafview

./: Cargo.toml  readme.md
assets/shaders/: colored_region.wgsl  lines_color_scheme.wgsl
proptest-regressions/: grid.txt  view.txt
src/: annotations.rs  app.rs  cigar.rs  cli.rs  config.rs  grid.rs  gui.rs  lib.rs  lines.wgsl  lines_color_scheme.wgsl  main.rs  math_conv.rs  paf.rs  pixels.rs  regions.rs  render.rs  sample_image.wgsl  sequences.rs  short.wgsl  spatial.rs  view.rs
src/annotations/: draw.rs  label_layout.rs  physics.rs
src/annotations/physics/: debug.rs
src/app/: alignments.rs  annotations.rs  figure_export.rs  gui.rs  infobar.rs  menubar.rs  picking.rs  render.rs  rulers.rs  selection.rs  view.rs
src/app/alignments/: layout.rs
src/app/annotations/: gui.rs  material.rs
src/app/render/: bordered_rect.rs  bordered_rect.wgsl  cigar_sampling.rs  layout.rs
src/cigar/: implicit.rs  memmap.rs
src/gui/: config.rs  debug.rs  goto.rs  regions.rs
src/render/: batch.rs  color.rs  exact.rs  gui.rs  lines.rs  thread.rs
src/render/exact/: detail.rs
