[package]
name = "pafview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytemuck = { version = "1.14.3", features = ["derive"] }
egui = "0.26.2"
egui-wgpu = { version = "0.26.2", features = ["winit", "wayland", "x11"] }
egui-winit = "0.26.2"
env_logger = "0.11.2"
pollster = "0.3.0"
rustc-hash = "1.1.0"
ultraviolet = { version = "0.9.2", features = ["bytemuck", "int", "f64"] }
wgpu = "0.19.1"
winit = "0.29.11"
