[package]
name = "pafview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bimap = "0.6.3"
bytemuck = { version = "1.14.3", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
egui = { version = "0.27.2", features = ["mint"] }
egui-wgpu = { version = "0.27.2", features = ["winit", "wayland", "x11"] }
egui-winit = "0.27.2"
egui_extras = { version = "0.27.2", features = ["file", "image", "svg", "all_loaders"] }
env_logger = "0.11.2"
line_drawing = "1.0.0"
lodepng = "3.10.1"
log = "0.4.21"
nalgebra = "0.32.5"
noodles = { version = "0.69.0", features = ["bgzf", "fasta", "fastq"] }
pollster = "0.3.0"
rapier2d = "0.18.0"
# rstar = { version = "0.12.0", features = ["mint"] }
rustc-hash = "1.1.0"
ultraviolet = { version = "0.9.2", features = ["bytemuck", "int", "f64", "mint", "num-traits"] }
wgpu = "0.19.3"
winit = "0.29.15"

[dev-dependencies]
float-cmp = "0.9.0"
proptest = "1.4.0"
rand = "0.8.5"


[profile.dev]
opt-level = 3

# [profile.dev.package."*"]
# opt-level = 3
