[package]
name = "pafview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bimap = "0.6.3"
bytemuck = { version = "1.14.3", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
ctrlc = "3.4.4"
directories = "5.0.1"
dirs = "5.0.1"
egui = { version = "0.28", features = ["mint"] }
egui-wgpu = { version = "0.28", features = ["winit", "wayland", "x11"] }
egui-winit = "0.28"
egui_extras = { version = "0.28", features = [
    "file",
    "image",
    "svg",
    "all_loaders",
] }
env_logger = "0.11.2"
line_drawing = "1.0.0"
lodepng = "3.10.1"
log = "0.4.21"
nalgebra = "0.32.5"
noodles = { version = "0.69.0", features = ["bgzf", "fasta", "fastq"] }
ordered-float = { version = "4.2.0", features = ["bytemuck"] }
pollster = "0.3.0"
rapier2d = "0.19.0"
ron = "0.8.1"
# rstar = { version = "0.12.0", features = ["mint"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
ultraviolet = { version = "0.9.2", features = [
    "bytemuck",
    "int",
    "f64",
    "mint",
    "num-traits",
] }
wgpu = "0.20"
winit = "0.30"

# impg = { path = "../impg" }
impg = { git = "https://github.com/chfi/impg.git", rev = "5a48b8c90ef7ae9c68933dd6dfd3aab62f25a362" }
bincode = "1.3.3"
coitrees = "0.4.0"

# bevy = "0.14"
# bevy = { version = "0.14", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy = { version = "0.14", features = ["bevy_dev_tools"] }
bevy_egui = "0.28.0"
bevy_polyline = "0.10.0"
leafwing-input-manager = "0.14.0"
bevy_mod_picking = "0.20.1"
bevy-inspector-egui = "0.25.2"

[dev-dependencies]
float-cmp = "0.9.0"
proptest = "1.4.0"
rand = "0.8.5"


[profile.dev]
opt-level = 3
debug-info = "full"
debug-assertions = true
overflow-checks = true

# [profile.dev.package."*"]
# opt-level = 3
